<resources>
    <string name="app_name">MyNewsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="failure_login">You could not register. Please check your information and try again</string>
    <string name="empty_fields_message">please fill all required fields</string>
    <string name="invalid_email_message">Invalid email</string>
    <string name="confirm_password">Passwords do not match</string>
    <string name="short_password_message">Password must be at least 8 character</string>
    <string name="successful_validation">Successful validation</string>
    <string name="failure_validation">Failure validation</string>
    <string name="successful_signup">Signup completed successfully</string>
    <string name="failure_signup">Signup failed. Please try again</string>
    <string name="successful_login">Login is Successful</string>
    <string name="no_digit">Password must contain at least one digit</string>
    <string name="no_lower_case">Password must contain at least one lowercase letter</string>
    <string name="no_upper_case">Password must contain at least one uppercase letter</string>
    <string name="no_special_character">Password must contain at least one special character (e.g., @, #, $, %, +).</string>
    <string name="unknown_error">Unknown error</string>
    <string name="wrong_something">Something is wrong. Please, try again</string>
    <string name="type_your_comment">Type your comment</string>
    <string name="website_is_not_avaliable">Website URL is not available</string>
    <string name="failed_add_comment">Failed to add comment</string>
    <string name="success_add_comment">Comment was successfully added</string>
    <string name="saved">Saved</string>
    <string name="facebook_login_cancelled">Facebook login is cancelled</string>
    <string name="default_web_client_id">1234567890-abcxyz.apps.googleusercontent.com</string>
    <string name="facebook_app_id">YOUR_FACEBOOK_APP_ID</string>
    <string name="time_ago_minutes">%1$d minute ago</string>
    <string name="time_ago_seconds">%1$d seconds ago</string>
    <string name="time_ago_hours">%1$d hours ago</string>
    <string name="time_ago_days">%1$d days ago</string>
    <string name="time_ago_weeks">%1$d weeks ago</string>
    <string name="time_ago_months">%1$d months ago</string>
    <string name="time_ago_years">%1$d years ago</string>
    <string name="save">Save</string>
    <string name="process_is_failure">Process is failure to fetch  data</string>
    <string name="failed_to_topics">Failed to fetch topics</string>
    <string name="failed_to_get_comments">Failed to fetch comments</string>
    <string name="failed_to_save_topics">Failed to save topics</string>
    <string name="failed_to_unsave_topics">Failed to unsave topics</string>
    <string name="process_is_failure_to_get_news">Process is failure to fetch news</string>
    <string name="successful_logout">Logout is successful</string>
    <string name="failure_logout">Logout failed</string>
    <string name="unexpected_result_state">Unexpected result state</string>
    <string name="failure_categories">Failure categories response</string>
    <string name="empty_color_or_size">Color and size can not be empty</string>
    <string name="empty_trending_result">Result is empty</string>
    <string name="empty_trending">No trend news</string>
    <string name="please_try_again">Please, try again</string>
    <string name="successfully_added_bookmark">The News has been added to bookmarks</string>
    <string name="unsafety_password">Unsafety password</string>
    <string name="failed_add_bookmark">The News failed to added to bookmark</string>
    <string name="failed_update_favorite">Failed to update favorite count</string>
    <string name="failed_update_comments">Failed to update comment count</string>
    <string name="successfully_removed">The news was successfully removed from bookmarks</string>
    <string name="successfully_deleted">The news was successfully deleted</string>
    <string name="failure_deleting">The news  failed to delete</string>
    <string name="failed_remove_from_bookmark">The news failed to remove from bookmarks</string>
    <string name="failed_follow">Failed to follow source</string>
    <string name="failed_favorite">Failed to favorite news</string>
    <string name="failed_unfavorite">Failed to unfavorite news</string>
    <string name="failed_unfollow">Failed to unfollow source</string>
    <string name="boarding_1_title">Stay Informed</string>
    <string name="boarding_2_title">Personalized for You</string>
    <string name="boarding_3_title">Fast and Reliable</string>
    <string name="boarding_1_description">Get the Latest News and Updates from Around the World in Real-Time</string>
    <string name="boarding_2_description">Follow Topics That Matter Most and Receive Tailored News Recommendations</string>
    <string name="boarding_3_description">Enjoy a Seamless Reading Experience with Trusted Sources at Your Fingertips</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="security">security</string>
    <string name="help">Help</string>
    <string name="language">Language</string>
    <string name="display">Display</string>
    <string name="failure_color_mode">Failed to set color mode</string>
    <string name="logout">Logout</string>
    <string name="see_all">See all</string>
    <string name="latest">Latest</string>
    <string name="hide">Hide</string>
    <string name="follow">Follow</string>
    <string name="english">English</string>
    <string name="azerbaijani">Azerbaijani</string>
    <string name="trending">Trending</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="reply">reply</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Sports</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="bookmark">Bookmark</string>
    <string name="topic">Topic</string>
    <string name="author">Author</string>
    <string name="popular_topic">Popular topic</string>
    <string name="profile">Profile</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="news">News</string>
    <string name="edit_profile">Edit profile</string>
    <string name="username">Username</string>
    <string name="website">Website</string>
    <string name="fullname">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="bio">Bio</string>
    <string name="Technology">Technology</string>
    <string name="create_news">Create news</string>
    <string name="comments">Comments</string>
    <string name="news_title">News title</string>
    <string name="add_news">Add News/Article</string>
    <string name="publish">Publish</string>
    <string name="failed_to_fetch_current_lang">Failed to fetch current language</string>
    <string name="failed_to_fetch_favorite_count">Failed to fetch favorite count</string>
    <string name="failed_to_fetch_comment_count">Failed to fetch comment count</string>
    <string name="failed_to_set_lang">Failed to set language</string>
    <string name="failed_to_load_followed_sources">Failed to load followed sources</string>
    <string name="successful_updating_profile">Profile is successfully updated</string>
    <string name="failure_updating_profile">Profile update failed, please try again later</string>
    <string name="successful_created_news">News is successfully created</string>
    <string name="failure_created_news">News failed to create</string>


</resources>