<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item

        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon_selector"
        android:title="@string/home"
        app:showAsAction="always">

    </item>
    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/explore_icon"
        android:title="@string/explore"
        app:showAsAction="always">

    </item>
    <item
        android:id="@+id/bookmarkFragment"
        android:icon="@drawable/bookmark_icon"
        android:title="@string/bookmark"
        app:showAsAction="always"
        
        >

    </item>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile"
        app:showAsAction="always">

    </item>
</menu>